# tarot-bot

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  FREE_TRIAL.md  FUZZY_MATCHING.md  PAYMENTS.md  README.md  WHITELIST.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.specify/memory/: constitution.md
data/: tarot_cards.json
specs/001-telegram-tarot-bot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-telegram-tarot-bot/checklists/: requirements.md
specs/001-telegram-tarot-bot/contracts/: bot-commands.md
src/: config.py  main.py
src/bot/: handlers.py  keyboards.py  middleware.py
src/i18n/: translations.py
src/i18n/locales/: en.json  ru.json  uk.json
src/models/: card.py  user_session.py
src/services/: ai_service.py  payment_service.py  session_service.py
src/tarot/: deck.py  spreads.py
